--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
+		"copy-to-clipboard": "^3.3.1",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
 		"react-scripts": "3.4.0",
+		"react-use": "^13.26.4",
 		"typescript": "~3.7.2",
 		"zustand": "^2.2.3"
 	},
