--- a/package.json
+++ b/package.json
@@ -15,7 +15,13 @@
 		"react-dom": "^16.13.0",
 		"react-scripts": "3.4.0",
 		"react-use": "^13.26.4",
+		"remark-parse": "^7.0.2",
+		"remark-react": "^6.0.0",
+		"remark-slug": "^5.1.2",
+		"remark-toc": "^7.0.0",
 		"typescript": "~3.7.2",
+		"unified": "^8.4.2",
+		"unist-util-visit-parents": "^3.0.2",
 		"zustand": "^2.2.3"
 	},
 	"scripts": {
