--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "scnu-schedule-ical-react",
+	"name": "scnu-schedule-ical-jwxt",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -11,17 +11,18 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"copy-to-clipboard": "^3.3.1",
+		"mdast-util-toc": "^5.0.2",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
 		"react-scripts": "3.4.0",
 		"react-use": "^13.26.4",
 		"remark-parse": "^7.0.2",
-		"remark-react": "^6.0.0",
 		"remark-slug": "^5.1.2",
-		"remark-toc": "^7.0.0",
+		"remark-rehype": "^5.0.0",
+		"rehype-slug": "^2.0.3",
+		"rehype-react": "^4.0.1",
 		"typescript": "~3.7.2",
 		"unified": "^8.4.2",
-		"unist-util-visit-parents": "^3.0.2",
 		"zustand": "^2.2.3"
 	},
 	"scripts": {
