--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"copy-to-clipboard": "^3.3.1",
+		"ical-generator": "^1.9.2",
 		"mdast-util-toc": "^5.0.2",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
 		"react-scripts": "3.4.0",
 		"react-use": "^13.26.4",
-		"remark-parse": "^7.0.2",
-		"remark-slug": "^5.1.2",
-		"remark-rehype": "^5.0.0",
-		"rehype-slug": "^2.0.3",
 		"rehype-react": "^4.0.1",
+		"rehype-slug": "^2.0.3",
+		"remark-parse": "^7.0.2",
+		"remark-rehype": "^5.0.0",
+		"remark-slug": "^5.1.2",
 		"typescript": "~3.7.2",
 		"unified": "^8.4.2",
 		"zustand": "^2.2.3"
