引入 fontawesome hooks framer-motion，改用 @umijs/hooks

--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.27",
+		"@fortawesome/free-brands-svg-icons": "^5.12.1",
+		"@fortawesome/free-solid-svg-icons": "^5.12.1",
+		"@fortawesome/react-fontawesome": "^0.1.8",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
@@ -10,13 +14,16 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
+		"@umijs/hooks": "^1.6.2",
+		"antd": "^4.0.0",
 		"copy-to-clipboard": "^3.3.1",
+		"framer-motion": "^1.8.4",
 		"ical-generator": "^1.9.2",
 		"mdast-util-toc": "^5.0.2",
 		"react": "^16.13.0",
 		"react-dom": "^16.13.0",
 		"react-scripts": "3.4.0",
-		"react-use": "^13.26.4",
+		"react-scroll-percentage": "^4.2.0",
 		"rehype-react": "^4.0.1",
 		"rehype-slug": "^2.0.3",
 		"remark-parse": "^7.0.2",
