--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/node": "^12.0.0",
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
+		"@types/smooth-scroll": "^16.1.0",
 		"@umijs/hooks": "^1.6.2",
 		"antd": "^4.0.0",
 		"copy-to-clipboard": "^3.3.1",
@@ -29,6 +30,7 @@
 		"remark-parse": "^7.0.2",
 		"remark-rehype": "^5.0.0",
 		"remark-slug": "^5.1.2",
+		"smooth-scroll": "^16.1.2",
 		"typescript": "~3.7.2",
 		"unified": "^8.4.2",
 		"zustand": "^2.2.3"
