迁移全局状态到 AppState，帮助文档改名 HelpDoc，实现导航栏功能

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
 	"cSpell.words": [
+		"Daxuecheng",
 		"ISCNU",
+		"Nanhai",
+		"Shipai",
 		"Zustand",
-		"rehype"
+		"antd",
+		"fontawesome",
+		"fortawesome",
+		"ical",
+		"jwxt",
+		"rehype",
+		"umijs"
 	]
 }
